testsuite/tests/v1/patterns/complex/non_existing_property/test.out
Error: Unknown member
   ╭─[ <working-dir>/script.lkql:2:23 ]
   │
 2 │ print(root is FooNode(p_not_a_prop(): 42))
   │                       ──────┬─────  
   │                             ╰─────── No member named "p_not_a_prop" on the value
───╯
